# turtled_server

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  test.db
alembic/: env.py
tests/repository/: conftest.py
tests/repository/example/: conftest.py  test_example.py
tests/service/example/: conftest.py  test_find_by_id.py  test_save.py
turtled_backend/: container.py  main.py
turtled_backend/common/error/: handler.py
turtled_backend/common/util/: __init__.py  auth.py  database.py  firebase.py  posture_package.py  repository.py  s3.py  time.py  transaction.py
turtled_backend/config/: config.py  log.py
turtled_backend/middleware/: log.py
turtled_backend/model/request/: challenge.py  predict.py  timer.py  user.py
turtled_backend/model/response/: challenge.py  example.py  predict.py  timer.py  user.py
turtled_backend/repository/: challenge.py  example.py  user.py
turtled_backend/router/: challenge.py  example.py  index.py  predict.py  timer.py  user.py
turtled_backend/schema/: app.py  challenge.py  example.py  user.py
turtled_backend/service/: challenge.py  example.py  predict.py  timer.py  user.py
